--- a/express-todo/package.json
+++ b/express-todo/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "debug": "^4.3.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "js-sha1": "^0.6.0",
     "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0"
   }
 }
