--- a/express-todo/package.json
+++ b/express-todo/package.json
@@ -15,6 +15,7 @@
     "debug": "^4.3.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "js-sha1": "^0.6.0",
     "mysql2": "^2.2.5"
   },
